--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/theme": "^2.2.9",
     "framer-motion": "^11.5.4",
     "next": "14.2.8",
+    "next-intl": "^3.19.1",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.12"
