--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/modal": "^2.0.39",
     "@nextui-org/react": "^2.4.6",
+    "@nextui-org/select": "^2.2.7",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "framer-motion": "^11.5.4",
@@ -19,7 +21,9 @@
     "next-intl": "^3.19.1",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.1.12"
+    "react-hook-form": "^7.53.1",
+    "swiper": "^11.1.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
