--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/select": "^2.2.7",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
+    "@reduxjs/toolkit": "^2.5.0",
     "framer-motion": "^11.5.4",
     "next": "14.2.8",
     "next-auth": "^4.24.8",
@@ -22,6 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-redux": "^9.2.0",
+    "sonner": "^1.7.1",
     "swiper": "^11.1.12",
     "zod": "^3.23.8"
   },
