--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.8",
     "next-auth": "^4.24.8",
     "next-intl": "^3.19.1",
+    "nuqs": "^2.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
