--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.5.0",
     "framer-motion": "^11.5.4",
+    "lightgallery": "^2.8.3",
     "next": "14.2.8",
     "next-auth": "^4.24.8",
     "next-intl": "^4.0.2",
