--- a/package.json
+++ b/package.json
@@ -3,28 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroui/breadcrumbs": "^2.2.16",
-    "@heroui/modal": "2.2.8",
+    "@heroui/modal": "^2.2.17",
+    "@heroui/pagination": "^2.2.18",
+    "@heroui/select": "^2.4.20",
+    "@heroui/spinner": "^2.2.17",
+    "@heroui/system": "^2.4.16",
+    "@heroui/theme": "^2.4.16",
     "@heroui/react": "2.6.14",
-    "@heroui/select": "2.4.10",
-    "@heroui/system": "2.4.7",
-    "@heroui/theme": "2.4.6",
     "@hookform/resolvers": "^3.9.0",
     "@mdxeditor/editor": "^3.29.2",
     "@reduxjs/toolkit": "^2.5.0",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^12.15.0",
     "lightgallery": "^2.8.3",
-    "next": "14.2.8",
-    "next-auth": "^4.24.8",
+    "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.0.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
@@ -34,12 +36,16 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
-    "sass": "^1.78.0",
+    "sass": "^1.89.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.5"
   }
 }
