--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@heroui/breadcrumbs": "^2.2.16",
     "@heroui/modal": "^2.2.17",
     "@heroui/pagination": "^2.2.18",
+    "@heroui/react": "2.6.14",
     "@heroui/select": "^2.4.20",
     "@heroui/spinner": "^2.2.17",
     "@heroui/system": "^2.4.16",
     "@heroui/theme": "^2.4.16",
-    "@heroui/react": "2.6.14",
+    "@heroui/use-infinite-scroll": "^2.2.9",
     "@hookform/resolvers": "^3.9.0",
     "@mdxeditor/editor": "^3.29.2",
     "@reduxjs/toolkit": "^2.5.0",
