--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "framer-motion": "^12.15.0",
     "lightgallery": "^2.8.3",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-intl": "^4.0.2",
