--- a/package.json
+++ b/package.json
@@ -9,41 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/breadcrumbs": "^2.2.16",
-    "@heroui/modal": "^2.2.17",
-    "@heroui/pagination": "^2.2.18",
-    "@heroui/react": "2.6.14",
-    "@heroui/select": "^2.4.20",
-    "@heroui/spinner": "^2.2.17",
-    "@heroui/system": "^2.4.16",
-    "@heroui/theme": "^2.4.16",
-    "@heroui/use-infinite-scroll": "^2.2.9",
+    "@heroui/breadcrumbs": "^2.2.20",
+    "@heroui/modal": "^2.2.21",
+    "@heroui/pagination": "^2.2.22",
+    "@heroui/react": "^2.8.2",
+    "@heroui/select": "^2.4.25",
+    "@heroui/spinner": "^2.2.21",
+    "@heroui/system": "^2.4.20",
+    "@heroui/theme": "^2.4.20",
+    "@heroui/use-infinite-scroll": "^2.2.10",
     "@hookform/resolvers": "^3.9.0",
-    "@mdxeditor/editor": "^3.29.2",
     "@reduxjs/toolkit": "^2.5.0",
-    "framer-motion": "^12.15.0",
+    "@tailwindcss/postcss": "^4.1.12",
+    "framer-motion": "^12.23.12",
     "lightgallery": "^2.8.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-intl": "^4.0.2",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.53.1",
+    "@mdxeditor/editor": "^3.29.2",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "swiper": "^11.1.12",
+    "tailwindcss": "^4.1.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.5",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.45",
     "sass": "^1.89.1",
-    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   },
   "overrides": {
