--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.10",
     "@heroui/react": "^2.8.2",
     "@hookform/resolvers": "^3.9.0",
     "@mdxeditor/editor": "^3.29.2",
