--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lightgallery": "^2.8.3",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.525.0",
-    "next": "15.3.3",
+    "next": "^16.0.7",
     "next-auth": "^4.24.11",
     "next-intl": "^4.0.2",
     "postcss": "^8.5.6",
